--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 <body>
     
-    <div class="side-bar-left-container">
+    <div class="side-bar-left-container" id="side-bar">
         <ul>
             <li><a href="#">Item1</a></li>
             <li><a href="#">Item2</a></li>
@@ -21,7 +21,7 @@
     </div>
     <header>
         <div class="toggle" >
-            <ion-icon name="menu-outline" class="menu-bar"></ion-icon>
+            <ion-icon id="menu" name="menu-outline" class="menu-bar"></ion-icon>
         </div>
         <nav>
             <ul>
@@ -31,7 +31,7 @@
             </ul>
         </nav>
     </header>
-    <main>
+    <main id="main">
         
         <div class="container">
             <div class="left">
@@ -45,6 +45,7 @@
             </div>
         </div>        
     </main>
+    <script src="script.js"></script>
   
 </body>
 </html>
