--- a/index.html
+++ b/index.html
@@ -32,19 +32,24 @@
         </nav>
     </header>
     <main id="main">
-        
-        <div class="container">
-            <div class="left">
-                <h1>Content</h1>
-                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quia ea, obcaecati repellat quaerat veniam totam suscipit. Perspiciatis perferendis ad ipsum et amet doloribus tempora blanditiis sed non culpa natus quasi, quas expedita illo laborum harum deleniti explicabo aperiam quidem. Minima, tempore. Eaque culpa blanditiis et dolore provident hic non nihil.</p>
+        <section>
+            <div class="container">
+                <div class="left">
+                    <h1>Content</h1>
+                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quia ea, obcaecati repellat quaerat veniam totam suscipit. Perspiciatis perferendis ad ipsum et amet doloribus tempora blanditiis sed non culpa natus quasi, quas expedita illo laborum harum deleniti explicabo aperiam quidem. Minima, tempore. Eaque culpa blanditiis et dolore provident hic non nihil.</p>
+                </div>
+                <div class="right">
+                    <li><a href="index.html">Ads</a></li>
+                    <li><a href="about.html">Ads</a></li>
+                    <li><a href="contact.html">ads</a></li>
+                </div>
             </div>
-            <div class="right">
-                <li><a href="index.html">Ads</a></li>
-                <li><a href="about.html">Ads</a></li>
-                <li><a href="contact.html">ads</a></li>
-            </div>
-        </div>        
+        </section>      
+        <footer>
+            <h1>Footer</h1>
+        </footer>  
     </main>
+    
     <script src="script.js"></script>
   
 </body>
