added icons and fixed sidebar

--- a/index.html
+++ b/index.html
@@ -13,10 +13,24 @@
     
     <div class="side-bar-left-container" id="side-bar">
         <ul>
-            <li><a href="#">Item1</a></li>
-            <li><a href="#">Item2</a></li>
-            <li><a href="#">Item3</a></li>
-            <li><a href="#">Item4</a></li>
+            <li>
+                <a href="#">
+                    <span class="icon"><ion-icon name="settings-outline"></ion-icon></span>
+                    <span class="title">Settings</span>
+                </a>
+            </li>
+            <li>
+                <a href="#">
+                    <span class="icon"><ion-icon name="settings-outline"></ion-icon></span>
+                    <span class="title">Settings</span>
+                </a>
+            </li>
+            <li>
+                <a href="#">
+                    <span class="icon"><ion-icon name="settings-outline"></ion-icon></span>
+                    <span class="title">Settings</span>
+                </a>
+            </li>
         </ul>
     </div>
     <header>
@@ -32,22 +46,22 @@
         </nav>
     </header>
     <main id="main">
-        <section>
-            <div class="container">
-                <div class="left">
-                    <h1>Content</h1>
-                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quia ea, obcaecati repellat quaerat veniam totam suscipit. Perspiciatis perferendis ad ipsum et amet doloribus tempora blanditiis sed non culpa natus quasi, quas expedita illo laborum harum deleniti explicabo aperiam quidem. Minima, tempore. Eaque culpa blanditiis et dolore provident hic non nihil.</p>
-                </div>
-                <div class="right">
-                    <li><a href="index.html">Ads</a></li>
-                    <li><a href="about.html">Ads</a></li>
-                    <li><a href="contact.html">ads</a></li>
-                </div>
+        <div class="container">
+            <div class="left">
+                <h1>Content</h1>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Praesentium saepe animi optio ex veritatis, libero rerum sunt provident repudiandae iure iste ad nostrum sed quae accusamus quo accusantium distinctio reiciendis ipsum officiis molestias repellat! Facilis ex ad cupiditate quam explicabo quidem incidunt voluptatem fuga similique doloremque eius sunt earum excepturi odio iure, expedita quo dolorum hic rerum dolorem, est nulla blanditiis necessitatibus consectetur. Debitis architecto quidem, quae cumque pariatur placeat dignissimos blanditiis impedit non similique animi dolorum, nam numquam dolorem tempora, nisi excepturi! Quam eveniet consequatur ab sunt, ad asperiores repellat temporibus. Fugiat voluptatibus recusandae vel iste, a nostrum inventore?</p>
             </div>
-        </section>      
+            <div class="right">
+                <ul>
+                    <li><a href="#">ADS</a></li>
+                    <li><a href="#">ADS</a></li>
+                    <li><a href="#">ADS</a></li>
+                </ul>
+            </div>
+        </div> 
         <footer>
             <h1>Footer</h1>
-        </footer>  
+        </footer>   
     </main>
     
     <script src="script.js"></script>
